--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,8 @@
     "helmet": "8.0.0",
     "pino": "9.6.0",
     "pino-pretty": "13.0.0",
+    "socket.io": "4.8.3",
+    "ulid": "3.0.2",
     "zod": "3.24.1"
   },
   "devDependencies": {
